Integrated github actions CI pipeline

--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "desktopapp-electron-gatsby",
   "version": "0.1.0",
   "description": "POC project to create a desktop application using Electron and Gatsby",
-  "main": "index.js",
+  "main": "./out/electron/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.ui.config.js --config webpack.electron.config.js",
     "build:watch": "npm run build -- --watch",
     "build-server": "dotnet publish ./src/server/ --output ../../out/server",
     "start": "electron ./out/electron/index.js",
-    "dist": "npm run build && electron-builder build -mwl -c.extraMetadata.main=out/electron/index.js"
+    "dist-w": "electron-builder build -w -c.extraMetadata.main=out/electron/index.js",
+    "dist-l": "electron-builder build -l -c.extraMetadata.main=out/electron/index.js",
+    "dist-m": "electron-builder build -m -c.extraMetadata.main=out/electron/index.js",
+    "dist": "electron-builder build -wlm -c.extraMetadata.main=out/electron/index.js"
   },
   "repository": {
     "type": "git",
