--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,14 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
 
+      - name: Upload artifact - Mac
+        if: startsWith(matrix.os, 'macOS')
+        uses: actions/upload-artifact@v2
+        with:
+          name: "Gatsby Desktop.dmg"
+          path: dist/*.dmg
 
-      - name: Uploads Build
+      - name: Uploads artifact - All
         uses: actions/upload-artifact@v2
         if: success()
         with:
