--- a/website/package.json
+++ b/website/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "k8slens",
+  "name": "k8-proxy-desktop-website",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://hunnain.github.io/p-poc-electron-gatsby-website/",
-  "dependencies": {
+  "devDependencies": {
+    "webpack": "4.42.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.1.0"
+  },
+  "dependencies": {
+    "clean": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -17,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "react-scripts build",
-    "deploy" : "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
