added other platforms
added other platforms

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,29 @@ jobs:
         if: startsWith(matrix.os, 'macOS')
         uses: actions/upload-artifact@v2
         with:
-          name: "Gatsby Desktop.dmg"
+          name: "k8-proxy-desktop.dmg"
           path: dist/*.dmg
+
+      - name: Upload artifact - Windows
+        if: startsWith(matrix.os, 'Windows')
+        uses: actions/upload-artifact@v2
+        with:
+          name: "k8-proxy-desktop.exe"
+          path: dist/*.exe
+
+      - name: Upload artifact - Linux Snap
+        if: startsWith(matrix.os, 'Ubuntu')
+        uses: actions/upload-artifact@v2
+        with:
+          name: "k8-proxy-desktop.snap"
+          path: dist/*.snap
+
+      - name: Upload artifact - Linux Debian
+        if: startsWith(matrix.os, 'Ubuntu')
+        uses: actions/upload-artifact@v2
+        with:
+          name: "k8-proxy-desktop.deb"
+          path: dist/*.deb
 
       - name: Uploads artifact - All
         uses: actions/upload-artifact@v2
