Incorporate review comments from Dinis on PR #62 #65
<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
Can these images be hosted locally?

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "k8-proxy-desktop",
-  "productName":"k8-proxy-desktop",
+  "productName": "k8-proxy-desktop",
   "version": "0.1.0",
   "description": "POC project to create a desktop application using Electron and Gatsby",
   "main": "./out/electron/index.js",
@@ -29,11 +29,14 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "css-loader": "^4.3.0",
     "electron": "^10.1.1",
     "electron-builder": "^22.8.0",
     "electron-reload": "^1.5.0",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
     "react-iframe": "^1.8.0",
+    "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
