--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: build-release
 
-on: push
+on: 
+  push:
+      tags:
+          - '*'
 
 jobs:
   release:
@@ -8,7 +11,17 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        #os: [macos-latest, ubuntu-latest, windows-latest]
+        include:
+          - os: ubuntu-latest
+            artifact_name: proxy-desktop
+            asset_name: proxy-desktop-linux
+          - os: windows-latest
+            artifact_name: proxy-desktop.exe
+            asset_name: proxy-desktop-windows
+          - os: macos-latest
+            artifact_name: proxy-desktop
+            asset_name: proxy-desktop-macos
 
     steps:
       - name: Check out Git repository
@@ -23,24 +36,29 @@ jobs:
         uses: samuelmeuli/action-electron-builder@v1
         with:
           github_token: ${{ secrets.github_token }}
+          file: target/release/${{ matrix.artifact_name }}
+          asset_name: ${{ matrix.asset_name }}
+          tag: ${{ github.ref }}
+          body: "This is my release text"
+          
 
-      - name: Upload artifact - Mac
-        if: startsWith(matrix.os, 'macOS')
-        uses: actions/upload-artifact@v2
-        with:
-          name: "k8-proxy-desktop.dmg"
-          path: dist/*.dmg
+      # - name: Upload artifact - Mac
+      #   if: startsWith(matrix.os, 'macOS')
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: "k8-proxy-desktop.dmg"
+      #     path: dist/*.dmg
 
-      - name: Upload artifact - Windows
-        if: startsWith(matrix.os, 'Windows')
-        uses: actions/upload-artifact@v2
-        with:
-          name: "k8-proxy-desktop.exe"
-          path: dist/*.exe
+      # - name: Upload artifact - Windows
+      #   if: startsWith(matrix.os, 'Windows')
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: "k8-proxy-desktop.exe"
+      #     path: dist/*.exe
 
-      - name: Upload artifact - Linux Snap
-        if: startsWith(matrix.os, 'Ubuntu')
-        uses: actions/upload-artifact@v2
-        with:
-          name: "k8-proxy-desktop.snap"
-          path: dist/*.snap
+      # - name: Upload artifact - Linux Snap
+      #   if: startsWith(matrix.os, 'Ubuntu')
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: "k8-proxy-desktop.snap"
+      #     path: dist/*.snap
