--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "react-highlight.js": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "url-loader": "^4.1.0"
   }
