--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/react-highlight.js": "^1.0.0",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -59,6 +60,7 @@
     "react-highlight": "^0.12.0",
     "react-highlight.js": "^1.0.7",
     "react-router-dom": "^5.2.0",
-    "url-loader": "^4.1.0"
+    "url-loader": "^4.1.0",
+    "xml-beautifier": "^0.4.3"
   }
 }
