--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "k8-proxy-desktop",
   "productName": "k8-proxy-desktop",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "description": "POC project to create a desktop application using Electron and Gatsby",
   "main": "./out/electron/index.js",
   "scripts": {
@@ -54,6 +54,7 @@
     "@material-ui/icons": "^4.9.1",
     "@types/react-highlight.js": "^1.0.0",
     "axios": "^0.20.0",
+    "axios-retry": "^3.1.9",
     "common-path": "^1.0.1",
     "crypto": "^1.0.1",
     "react": "^16.13.1",
